# fac-ws_ai_multi-agent

./: .gitignore  LICENSE  PATTERNS.md  README.md  environment.yml  pyproject.toml  setup.cfg  vdfs.md
patterns/: 01_sequential_workflow.py  02_conditional_routing.py  03_parallel_processing.py  04_supervisor_agents.py  05_evaluator_optimiser.py  06_orchestrator_worker.py  06_production_ready.py  07_production_ready.py  utils.py
patterns_simple/: 01_sequential_workflow.py  02_conditional_workflow.py  03_parallel_processing.py  04_superviser_agents.py  05_evaluator_optimiser.py  06_orchestrator_worker.py  07_production_ready.py
simple/: 01_sequential_workflow.py  04_superviser_agents.py  05_evaluator_optimiser.py
solution/: 01_sequential_workflow.py  02_conditional_routing.py  03_parallel_processing  03_parallel_processing.py  04_supervisor_agents.py  05_evaluator_optimiser.py  05_evaluator_optimisr.py  06_orchestrator_worker.py  06_production_ready.py  07_production_ready.py  pattern_comparison.py  utils.py
solutions/: 07_production_ready_solution.py
src/: main.py
